--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <meta name="google-site-verification" content="2FvTpt3pRXc0NkgeS9GuMfxitXzVk1TeI-E1nFD5iWg" />
   </head>
   <body>
     <!-- nav -->
