--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
 
+  <!-- pinterest -->
+  <meta name="p:domain_verify" content="308a4f942806636114b51c6b92087011"/>
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -24,8 +27,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <!-- Template Main CSS File --> sheet">
 
   <!-- =======================================================
   * Template Name: MyResume - v4.3.0
